@@ -1,3 +1,8 @@
+2006-10-18  Gautier Portet <kassoulet gmail com>
+
+	* soundconverter.py: Fixed Tag writing when converting to mp3.
+	  Fixed progress.
+
 2006-10-15  Gautier Portet <kassoulet gmail com>
 
 	* soundconverter.py: Only remove files when conversion was
